# tail-f

./: .gitignore  README.md  pyproject.toml
backend/: log_core.py  main.py  security.py  ssh_manager.py
config/: settings.yaml
docs/: REMOTE_SETUP.md  SECURITY.md
logs/: .gitkeep
static/: index.html
static/lib/css/: element-plus.css
