[project]
name = "tail-f-web"
version = "1.0.0"
description = "现代化的 Web 日志实时查看工具"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pyyaml>=6.0",
    "sse-starlette>=1.6.0",
    "paramiko>=3.0.0",
    "cryptography>=41.0.0",
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
